--- a/css/styles.css
+++ b/css/styles.css
@@ -530,3 +530,25 @@ footer {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+.branch-thumb {
+  position: relative;
+}
+
+.branch-label {
+  font-weight: 700;
+  color: var(--light-text-color);
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  padding: 27px 0;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  text-align: center;
+}
+
+.branch-label-box {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
