--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@ ul {
   text-decoration: inherit;
   font-style: inherit;
   color: inherit;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .brand-name {
@@ -83,6 +84,7 @@ ul {
 .contact-icon-text .link {
   display: flex;
   align-items: center;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-icon-text .link:hover,
 .contact-icon-text .link:focus {
@@ -128,6 +130,7 @@ ul {
   align-items: center;
   letter-spacing: 0.06em;
   cursor: pointer;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .slogan-button:hover,
@@ -245,6 +248,7 @@ ul {
   color: inherit;
   cursor: pointer;
   padding: 6px 22px;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sort-button:hover,
@@ -430,6 +434,7 @@ footer {
   align-items: center;
   justify-content: center;
   color: var(--icons-light-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-icon-content {
@@ -469,6 +474,7 @@ footer {
   align-items: center;
   justify-content: center;
   color: var(--icons-light-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-icon-content {
@@ -507,6 +513,7 @@ footer {
   align-items: center;
   justify-content: center;
   color: var(--light-text-color);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-us-icon-content {
@@ -535,6 +542,7 @@ footer {
 
 .portfolio-box .link {
   display: block;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-box .link:hover,
@@ -628,6 +636,10 @@ footer {
   width: 370px;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
+  display: flex;
+  align-items: center;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .portfolio-box a:hover .portfolio-image-overlay,
@@ -641,5 +653,4 @@ footer {
   letter-spacing: 0.03em;
   color: var(--light-text-color);
   display: block;
-  margin: 49px 24px auto;
 }
