--- a/css/styles.css
+++ b/css/styles.css
@@ -571,13 +571,14 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .is-hidden {
-  pointer-events: none;
   visibility: hidden;
   opacity: 0;
   transform: scale(0);
+  pointer-events: none;
 }
 
 .backdrop {
@@ -591,8 +592,7 @@ footer {
   bottom: 0;
   z-index: 1;
   transform: scale(1);
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -607,15 +607,29 @@ footer {
   border-radius: 4px;
 }
 
-.modal-close {
+.close-icon-box {
   width: 30px;
   height: 30px;
-  display: block;
+  border-radius: 50%;
   background-color: var(--light-text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-width: 1px;
+  border-style: solid;
+}
+.close-icon-content {
+  fill: black;
+}
+
+.modal-close {
+  padding: 0;
   position: relative;
   top: 8px;
-  left: 484px;
-  border: none;
+  left: 490px;
+  background-color: var(--light-text-color);
+  border-width: 0;
 }
 
 .portfolio-box figure {
