--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ ul {
   text-decoration: inherit;
   font-style: inherit;
   color: inherit;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .brand-name {
@@ -84,7 +84,7 @@ ul {
 .contact-icon-text .link {
   display: flex;
   align-items: center;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-icon-text .link:hover,
 .contact-icon-text .link:focus {
@@ -131,6 +131,7 @@ ul {
   letter-spacing: 0.06em;
   cursor: pointer;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color, background-color;
 }
 
 .slogan-button:hover,
@@ -249,6 +250,7 @@ ul {
   cursor: pointer;
   padding: 6px 22px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color, background-color, box-shadow;
 }
 
 .sort-button:hover,
@@ -435,6 +437,7 @@ footer {
   justify-content: center;
   color: var(--icons-light-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color, background-color;
 }
 
 .team-icon-content {
@@ -475,6 +478,7 @@ footer {
   justify-content: center;
   color: var(--icons-light-color);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: color, border-color;
 }
 
 .client-icon-content {
@@ -513,7 +517,7 @@ footer {
   align-items: center;
   justify-content: center;
   color: var(--light-text-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .join-us-icon-content {
@@ -542,7 +546,7 @@ footer {
 
 .portfolio-box .link {
   display: block;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-box .link:hover,
@@ -556,22 +560,21 @@ footer {
 }
 
 .branch-label {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 1;
   font-weight: 700;
   color: var(--light-text-color);
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  padding: 27px 0;
+  height: 70px;
   text-transform: uppercase;
   background-color: rgba(47, 48, 58, 0.8);
-  text-align: center;
-}
-
-.branch-label-box {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .is-hidden {
@@ -593,6 +596,7 @@ footer {
   z-index: 1;
   transform: scale(1);
   transition: 500ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: visibility, opacity, transform;
 }
 
 .modal {
@@ -646,7 +650,7 @@ footer {
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 370px;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
